# hyperloglog-rs

./: .$triple_overlap.drawio.bkp  .$tuple_overlap.drawio.bkp  .gitignore  Cardinality evaluations.ipynb  Cargo.toml  Generate lookup table files..ipynb  Intersection evaluations.ipynb  Jaccard evaluations.ipynb  LICENSE  Patching floats.ipynb  README.md  Specialized cardinality approximators.ipynb  Specialized counts.ipynb  Specialized unions.ipynb  Test suite generator.ipynb  Union evaluations.ipynb  Untitled.ipynb  beta.json  beta.rs  build.rs  coverage.py  multiplities_constants_precomputation.py  original_biases.json  original_biases.rs  original_estimates.json  original_estimates.rs  out.rs  rustc-ice-2024-08-28T10_02_14-2732287.txt  rustc-ice-2024-08-28T10_02_14-2732288.txt  rustc-ice-2024-08-28T10_02_25-2732586.txt  rustc-ice-2024-08-28T10_02_25-2732587.txt  rustc-ice-2024-08-28T10_02_54-2732909.txt  rustc-ice-2024-08-28T10_02_54-2732910.txt  rustc-ice-2024-08-28T10_03_09-2741141.txt  rustc-ice-2024-08-28T10_03_19-2749330.txt  rustc-ice-2024-08-28T10_04_18-2757746.txt  triple_overlap.drawio  tuple_overlap.drawio
benches/: README.md  adding_elements.rs  array.rs  binary_search.rs  bitor_assign.rs  cardinality.rs  counting_elements.rs  estimate_cardinality.rs  estimated_intersection.rs  estimated_overlap_and_differences_cardinality_matrices.rs  estimated_overlap_cardinality_matrices.rs  exp2.rs  hash_functions.rs  hash_list_insert.rs  hybrid.rs  hyperloglog_insert.rs  insert.rs  plot_benches.py  union.log.backup  union.rs  unique_count_from_sorted_iterators.rs  utils.rs
bias_estimator/: Cargo.toml  biases.json
drawio/: min_intersection.drawio  registers_hll.drawio  triple_overlap.drawio  tuple_overlap.drawio
duplicates-count/: Cargo.toml  README.md  duplicates.csv
duplicates-count/src/: main.rs
evaluate_composite_hash/: Cargo.toml  README.md  collision_rates.csv  visualization.py
evaluate_composite_hash/src/: main.rs
experiments/: Cargo.toml  weights.json
experiments/benchmarks/: .gitignore  Benchmarks.ipynb  Cargo.toml  README.md
experiments/benchmarks/src/: main.rs
experiments/cardinality_model/: Cargo.toml  weights.json
experiments/cardinality_model/src/: main.rs
experiments/oddity_six/: Cargo.toml  OdditySix.ipynb  results.csv
experiments/oddity_six/src/: main.rs
experiments/union_model/: .gitignore  Cargo.toml  weights.json
experiments/union_model/src/: main.rs
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: cardinality.rs  intersection_cardinality.rs  method_execution.rs  registers_symmetry.rs  sketching.rs
hash_list_correction/: .gitignore  10_4.hashlist.json  10_4.hashlist.metadata.json  10_5.hashlist.json  10_5.hashlist.metadata.json  10_6.hashlist.json  10_6.hashlist.metadata.json  11_4.hashlist.json  11_4.hashlist.metadata.json  11_5.hashlist.json  11_5.hashlist.metadata.json  11_6.hashlist.json  11_6.hashlist.metadata.json  12_4.hashlist.json  12_4.hashlist.metadata.json  12_5.hashlist.json  12_5.hashlist.metadata.json  12_6.hashlist.json  12_6.hashlist.metadata.json  13_4.hashlist.json  13_4.hashlist.metadata.json  13_5.hashlist.json  13_5.hashlist.metadata.json  13_6.hashlist.json  13_6.hashlist.metadata.json  14_4.hashlist.json  14_4.hashlist.metadata.json  14_5.hashlist.json  14_5.hashlist.metadata.json  14_6.hashlist.json  14_6.hashlist.metadata.json  15_4.hashlist.json  15_4.hashlist.metadata.json  15_5.hashlist.json  15_5.hashlist.metadata.json  15_6.hashlist.json  15_6.hashlist.metadata.json  16_4.hashlist.json  16_4.hashlist.metadata.json  16_5.hashlist.json  (+64 more)
hash_list_correction/src/: gap_hash.rs  main.rs  ramer_douglas_peucker.rs  switch_hash.rs  utils.rs
hyperloglog-derive/: Cargo.toml
measure_gaps/: Cargo.toml  README.md  plot_gaps.py
measure_variant/: .gitignore  Cargo.toml  latest_report.csv  plot_reports.py  reference_report.csv
measure_variant/src/: main.rs
optimal-gap-codes/: Cargo.toml  README.md  optimal-gap-codes.csv
optimal-gap-codes/src/: main.rs
scripts/: compare_hybrid_hash.py
src/: alpha.rs  array_default.rs  atomic_alias.rs  basicloglog.rs  bias.rs  bitand.rs  bitor.rs  bitor_iter.rs  bits.rs  composite_hash.rs  correction_coefficients.rs  estimated_union_cardinalities.rs  estimator.rs  exact_hyper_spheres_sketch.rs  hash_list.rs  hasher_method.rs  hashlist.rs  hashset.rs  hybrid.rs  hyper_spheres_sketch.rs  hyperloglog.rs  hyperloglog_array.rs  hyperloglog_array_trait.rs  hyperloglog_macro.rs  hyperloglog_multeplicities.rs  hyperloglog_multiplicities.rs  hyperloglog_trait.rs  iter.rs  joint_estimation.rs  lib.rs  log.rs  loglogbeta.rs  max_min.rs  mle.rs  multiplicities.rs  naive_integer_hash.rs  number_of_bits_lookup_table.rs  ones.rs  optimizers.rs  plusplus.rs  (+10 more)
statistical_comparisons/: Cargo.toml  README.md  out.rs
statistical_comparisons/benches/: README.md  cardinality.rs  insert.rs  plot_benches.py  union.rs
statistical_comparisons/macro_test_utils/: Cargo.toml
statistical_comparisons/macro_test_utils/src/: lib.rs
statistical_comparisons/macro_test_utils/tests/: test_derives.rs
statistical_comparisons/reports/: .gitignore
statistical_comparisons/src/: cardinality.rs  cartesian_wilcoxon_test.rs  csv_utils.rs  enumerations.rs  estimation_tests.rs  lib.rs  main.rs  proxy_implementations.rs  reports_generator.rs  traits.rs  union.rs  utils.rs
statistical_comparisons/statistical_tests_reports/: plot_statistical_tests_results.py  win_tie_loss_table.md
test_utils/: Cargo.toml
test_utils/src/: cardinality_to_index.rs  csv.rs  lib.rs  parallel.rs  ramer_douglas_peucker.rs  readable_number.rs  sample_builder.rs  sample_collector.rs  set.rs  statistics.rs
tests/: test_cardinalities.rs  test_compare_cardinality.rs  test_compare_union.rs  test_comparisons.rs  test_get_number_of_bits.rs  test_hll.rs  test_hll_10.rs  test_hll_11.rs  test_hll_12.rs  test_hll_13.rs  test_hll_14.rs  test_hll_15.rs  test_hll_16.rs  test_hll_17.rs  test_hll_4.rs  test_hll_5.rs  test_hll_6.rs  test_hll_7.rs  test_hll_8.rs  test_hll_9.rs  test_hyper_spheres_sketch.py  test_hyper_spheres_sketch.rs  (+7 more)
(+124 files in other folders)
