[workspace]
resolver = "2"
members = [".", "statistical_comparisons"]

[package]
name = "hyperloglog-rs"
version = "0.1.56"
edition = "2021"
authors = ["Luca Cappelletti <cappelletti.luca94@gmail.com>"]
description = "A Rust implementation of HyperLogLog trying to be parsimonious with memory."
homepage = "https://github.com/LucaCappelletti94/hyperloglog-rs"
repository = "https://github.com/LucaCappelletti94/hyperloglog-rs"
readme = "README.md"
license = "MIT"
keywords = ["hyperloglog", "probabilistic", "algorithm", "cardinality", "estimation",]
categories = [
    "no-std",
    "algorithms",
    "science"
]
exclude = [
    "fuzz/",
    "intersection_tests/",
    "union_test",
    "experiments",
    "intersection_benchmarks.tsv.gz"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", default-features = false, features = ["derive"], optional = true }
paste = "1.0.15"
twox-hash = {version="1.6.3", default-features = false}
mem_dbg = {version = "0.2.4", optional = true}

[build-dependencies]
serde_json = "1.0"

[dev-dependencies]
serde_json = "1.0"
criterion = { version = "0.5", features = ["html_reports"] }
hyperloglogplus = {git = "https://github.com/LucaCappelletti94/hyperloglog.rs.git", branch = "mem_dbg"}
streaming_algorithms = {git = "https://github.com/LucaCappelletti94/streaming_algorithms", branch = "mem_dbg"}
cardinality-estimator = {git = "https://github.com/LucaCappelletti94/cardinality-estimator.git", branch = "mem_dbg"}
rust-hyperloglog = {git = "https://github.com/LucaCappelletti94/rust-hyperloglog.git", branch = "updated_siphasher", package = "hyperloglog"}
stattest = {git = "https://github.com/LucaCappelletti94/stattest"}
sourmash = {git="https://github.com/LucaCappelletti94/sourmash.git", features = ["mem_dbg"], branch = "latest_merged"}
hypertwobits = {git="https://github.com/LucaCappelletti94/hypertwobits.git", features = ["mem_dbg"], branch="merge_all"}
csv = "1.3.0"
wyhash = "0.5.0"



[features]
default = ["serde", "mem_dbg", "low_precisions", "mle", "beta", "plusplus"]
beta = []
precomputed_beta = ["beta"]
plusplus = []
# Whether to use local interpolation or kmeans in plus plus bias correction.
plusplus_kmeans = ["plusplus"]
# Whether to use integer or floating point biases and estimates.
integer_plusplus = ["plusplus"]
std = [
    "twox-hash/std",
]
mem_dbg = [
    "dep:mem_dbg",
    "std",
]
mle = ["std"]
precision_4 = []
precision_5 = []
precision_6 = []
precision_7 = []
precision_8 = []
precision_9 = []
precision_10 = []
precision_11 = []
precision_12 = []
precision_13 = []
precision_14 = []
precision_15 = []
precision_16 = []
precision_17 = []
precision_18 = []
low_precisions = [
    "precision_4",
    "precision_5",
    "precision_6",
    "precision_7",
    "precision_8",
    "precision_9",
    "precision_10",
]
medium_precisions = [
    "precision_11",
    "precision_12",
    "precision_13",
    "precision_14",
    "precision_15",
    "precision_16",
]
high_precisions = [
    "precision_17",
    "precision_18",
]
all_precisions = [
    "low_precisions",
    "medium_precisions",
    "high_precisions",
]
alloc = []

[profile.test]
overflow-checks = true   # Disable integer overflow checks.
debug = false            # Include debug info.
debug-assertions = true  # Enables debug assertions.
opt-level = 3

[profile.release]
overflow-checks = false   # Disable integer overflow checks.
debug = false            # Include debug info.
debug-assertions = false  # Enables debug assertions.
opt-level = 3

[[bench]]
name = "insert"
harness = false

[[bench]]
name = "cardinality"
harness = false

[[bench]]
name = "union"
harness = false



