[package]
name = "evaluate_composite_hash"
version = "0.1.0"
edition = "2021"

[dependencies]
csv = "1.3.0"
hyperloglog-rs = { path = "../../hyperloglog-rs", default-features=false, features=["all_precisions", "plusplus"] }
indicatif = {version="0.17.8", features=["rayon"]}
paste = "1.0.15"
rayon = "1.10.0"
serde = {version="1.0", features=["derive"]}
twox-hash = "1.6.3"
wyhash = "0.5.0"
