[package]
name = "hyperloglog-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = { version = "1", features = ["derive"] }

[dependencies.hyperloglog-rs]
path = ".."

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[profile.release]
debug = 1

[[bin]]
name = "registers_symmetry"
path = "fuzz_targets/registers_symmetry.rs"
test = false
doc = false

[[bin]]
name = "sketching"
path = "fuzz_targets/sketching.rs"
test = false
doc = false

[[bin]]
name = "intersection_cardinality"
path = "fuzz_targets/intersection_cardinality.rs"
test = false
doc = false

[[bin]]
name = "cardinality"
path = "fuzz_targets/cardinality.rs"
test = false
doc = false

[[bin]]
name = "method_execution"
path = "fuzz_targets/method_execution.rs"
test = false
doc = false
