[package]
name = "measure_variant"
version = "0.1.0"
edition = "2021"

[dependencies]
hyperloglog-rs = {path="../", features=["std", "mem_dbg"]}
statistical_comparisons = {path="../statistical_comparisons"}
indicatif = { version = "0.17.8", features = ["rayon"] }
rayon = "1.10.0"
serde = { version = "1.0.208", features = ["derive"] }
test_utils = {path="../test_utils"}
twox-hash = {git="https://github.com/LucaCappelletti94/twox-hash", branch="merged", features=["mem_dbg"]}
mem_dbg = "0.2.4"
wyhash = {git="https://github.com/LucaCappelletti94/wyhash-rs", branch="merged", features=["mem_dbg"]}