[package]
name = "statistical_comparisons"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_json = "1.0"
rand = "0.8"
hyperloglog-rs = {path = "../", features = ["mem_dbg", "all_precisions", "precomputed_beta"] }
criterion = { version = "0.5", features = ["html_reports"] }
hyperloglogplus = {git = "https://github.com/LucaCappelletti94/hyperloglog.rs.git", branch = "mem_dbg", features = ["mem_dbg"]}
streaming_algorithms = {git = "https://github.com/LucaCappelletti94/streaming_algorithms", branch = "mem_dbg", features = ["mem_dbg"]}
cardinality-estimator = {git = "https://github.com/LucaCappelletti94/cardinality-estimator.git", branch = "mem_dbg", features = ["mem_dbg"]}
rust-hyperloglog = {git = "https://github.com/LucaCappelletti94/rust-hyperloglog.git", branch = "updated_siphasher", package = "hyperloglog", features = ["mem_dbg"]}
sourmash = {git="https://github.com/LucaCappelletti94/sourmash.git", features = ["mem_dbg"], branch = "latest_merged"}
hypertwobits = {git="https://github.com/LucaCappelletti94/hypertwobits.git", features = ["mem_dbg"], branch="merge_all"}
simple_hll = {git="https://github.com/LucaCappelletti94/simple_hll.git", features = ["mem_dbg"], branch="mem_dbg"}
stattest = {git = "https://github.com/LucaCappelletti94/stattest"}
csv = "1.3.0"
wyhash = "0.5.0"
mem_dbg = "0.2.4"
paste = "1.0.15"
twox-hash = "1.6.3"
indicatif = {version="0.17.8", features=["rayon"]}
rayon = "1.10.0"
serde = "1.0.206"
macro_test_utils = { path = "macro_test_utils" }
strum = "0.26.3"
strum_macros = "0.26.4"
bincode = "1.3.3"
log = "0.4.22"
env_logger = "0.11.5"

[features]
std = []
default = ["mle"]
mle = ["std", "hyperloglog-rs/mle"]


[[bench]]
name = "insert"
harness = false

[[bench]]
name = "cardinality"
harness = false

[[bench]]
name = "union"
harness = false
