[package]
name = "test_utils"
version = "0.1.0"
edition = "2021"

[dependencies]
colored = "2.1.0"
csv = "1.3.0"
flate2 = "1.0.32"
indicatif = "0.17.8"
serde = { version = "1.0.208", features = ["derive"] }
stattest = {git = "https://github.com/LucaCappelletti94/stattest", branch = "faster_wilcoxon", features=["voracious_radix_sort"]}
rayon = "1.10.0"
hyperloglog-rs = {path = "../"}
wyhash = "0.5.0"
mem_dbg = "0.2.4"