[package]
name = "benchmarks"
version = "0.1.0"
edition = "2021"
description = "Benchmarks for HLL implementations"
license = "MIT"
keywords = ["benchmarks", "hyperloglog"]
categories = [
    "algorithms",
    "science"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indicatif = {version="0.17.0", features = ["rayon"]}
hyperloglog-rs = { version = "0.1.51", features = ["std"] }
hyperloglogplus = { git = "https://github.com/LucaCappelletti94/hyperloglog.rs", features = ["const-loop"] }
streaming_algorithms = { git = "https://github.com/LucaCappelletti94/streaming_algorithms", features = ["nightly"] }
mem_dbg = {git = "https://github.com/zommiommy/mem_dbg-rs"}
rand = "0.8.5"
csv = "1.3.0"
