[package]
name = "cardinality_model"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indicatif = {version="0.17.0", features = ["rayon"]}
rayon = "1.8.0"
vec_rand = { git = "https://github.com/zommiommy/vec_rand", branch = "master" }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = "1.0"
hyperloglog-rs = {git = "https://github.com/LucaCappelletti94/hyperloglog-rs", branch = "intersection_mle"}
rand = "0.8.5"