[package]
name = "oddity_six"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indicatif = {version="0.17.0", features = ["rayon"]}
hyperloglog-rs = { path = "../../../hyperloglog-rs" }
mem_dbg = {git = "https://github.com/zommiommy/mem_dbg-rs"}
rand = "0.8.5"
csv = "1.3.0"
